# GateClaw-Genesis

./: .gitignore  README.md  debug_facts.py  genesis_watcher.py  memory_injector.py  pyproject.toml  re_consolidate.py  requirements.txt  start_watcher.py
examples/: demo.py
src/: __init__.py
src/core/: __init__.py  genesis.py
src/memory/: __init__.py  buffer.py  consolidation.py  embeddings.py  episodes.py  recall.py
src/models/: __init__.py  episode.py
tests/: run_tests.py  test_buffer.py  test_embeddings.py  test_episodes.py  test_genesis.py
